--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="content">
     <header>
-        <img src="./theme/images/photo.jpeg" alt="me">
+        <img src="./theme/images/photo.jpg" alt="me">
         <h1>Kai Chen (陈凯)</h1>
         <ul>
             <!--<li><a href="./#experience">Experience</a></li>-->
