--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="content">
     <header>
-        <img src="./theme/images/photo2.jpg" alt="me">
+        <img src="./theme/images/photo.jpg" alt="me">
         <h1>Kai Chen (陈凯)</h1>
         <ul>
             <!--<li><a href="./#experience">Experience</a></li>-->
@@ -27,20 +27,21 @@
     </header>
     
 <section id="bio">
-I am a a first-year PhD student at USC. I am advised by Prof Kristina Lerman. His research interest mainly revolves around natural language processing and computational social science. Specifically, he is interested in model safety and LLM application. Recently, he has been studying ideological manipulation in LLM. He also leverages LLM to understand the influence campaign in online social media.
+I am a second-year PhD student at University of Southern California (USC), where I work at the <a href="https://www.isi.edu/" target="_black"> Information Sciences Institute</a> (USC-ISI). I am advised by Prof <a href="https://www.isi.edu/people-lerman/" target="_black"> Kristina Lerman</a>. My research interest mainly revolves around computational social science and natural language processing. Specifically, I am interested in Large Language model (LLM) safety and LLM application. Recently, I have been studying ideological manipulation in LLMs. I also leverages LLM to understand the influence campaign in online social media.
 
 
-<p><b>Email</b>: kchen035 AT usc.com </p>
+<p><b>Email</b>: kchen035 AT usc.edu; kchen AT isi.edu </p>
 
 <section id="education">  
     <h2>Education</h2>
         <ul>
         <li>Aug. 2023 - Now<br>
         Ph.D. in Computer Science, University of Southern California<br>
-        Advisor: <a href="https://sites.google.com/site/nhcollier/" target="_black"> Prof. Kristina Lerman</a><br>
+        Advisor: <a href="https://www.isi.edu/people-lerman/" target="_black"> Prof. Kristina Lerman</a><br>
         </li>
         <li>Aug. 2020 - Dec. 2022<br>
         M.S. in Computer Science, University of Southern California<br>
+        Advisor: Prof. Kristina Lerman; <a href="https://jonmay.github.io/webpage/" target="_black"> Prof. Jonathan May</a><br>
         <li>Sep. 2016 - Jun. 2020<br>
         B.E. in Software Engineering, Zhejiang University of Technology</li>
         </ul>
@@ -64,13 +65,40 @@ I am a a first-year PhD student at USC. I am advised by Prof Kristina Lerman. Hi
 
 
     <li>
-        <a href = "https://arxiv.org/abs/2402.10175" target="_black">Safer-instruct: Aligning language models with automated preference data</a>
+        <a href = "https://aclanthology.org/2024.naacl-long.422.pdf" target="_black">Safer-instruct: Aligning language models with automated preference data</a>
     <br>
     Taiwei Shi, <b>Kai Chen</b>, Jieyu Zhao
     <br>
     <i>NAACL 2024</i>
     <br>
     </li>
+
+    <li>
+        <a href = "https://ojs.aaai.org/index.php/ICWSM/article/view/31434/33594" target="_black">IsamasRed: A Public Dataset Tracking Reddit Discussions on Israel-Hamas Conflict</a>
+    <br>
+    <b>Kai Chen</b>, Zihao He, Keith Burghardt, Jingxin Zhang, Kristina Lerman
+    <br>
+    <i>ICWSM 2024</i>
+    <br>
+    </li>
+
+    <li>
+        <a href = "https://arxiv.org/abs/2405.03688" target="_black">Large Language Models Reveal Information Operation Goals, Tactics, and Narrative Frames</a>
+    <br>
+    Keith Burghardt, <b>Kai Chen</b>, Kristina Lerman
+    <br>
+    <i>CySoc @ ICWSM 2024</i>
+    <br>
+    </li>
+
+    <li>
+        <a href = "https://arxiv.org/abs/2212.00339" target="_black">Anger breeds controversy: analyzing controversy and emotions on reddit</a>
+    <br>
+    <b>Kai Chen</b>, Zihao He, Rong-Ching Chang, Jonathan May, Kristina Lerman
+    <br>
+    <i>SBP-BRiMS 2023</i>
+    <br>
+    </li>   
     
     </ul>
 </section>
@@ -90,4 +118,3 @@ I am a a first-year PhD student at USC. I am advised by Prof Kristina Lerman. Hi
     </div>
 </body>
 </html>
-
