--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     
 <section id="bio">
-I am a second-year PhD student at University of Southern California (USC), where I work at the <a href="https://www.isi.edu/" target="_black"> Information Sciences Institute</a> (USC-ISI). I am advised by Prof <a href="https://www.isi.edu/people-lerman/" target="_black"> Kristina Lerman</a>. My research interest mainly revolves around computational social science and natural language processing. Specifically, I am interested in Large Language model (LLM) safety and LLM application. Recently, I have been studying ideological manipulation in LLMs. I also leverages LLM to understand the influence campaign in online social media.
+I am a Second-year PhD student at University of Southern California(USC), where I work at the <a href="https://www.isi.edu/" target="_black"> Information Sciences Institute</a> (USC-ISI). I am advised by Prof <a href="https://www.isi.edu/people-lerman/" target="_black"> Kristina Lerman</a>. My research interest mainly revolves around computational social science and natural language processing. Specifically, I am interested in Large Language model (LLM) safety and LLM application. Recently, I have been studying ideological manipulation in LLMs. I also leverages LLM to understand the influence campaign in online social media.
 
 
 <p><b>Email</b>: kchen035 AT usc.edu; kchen AT isi.edu </p>
@@ -103,6 +103,12 @@ I am a second-year PhD student at University of Southern California (USC), where
     </ul>
 </section>
 
+<section id="Teaching">
+    <h2>Teaching</h2> 
+        <ul>
+            <li>Fall 2024, <a href = "https://aiichironakano.github.io/cs596.html" target="_black">CSCI 596 Scientific Computing and Visualization</a>, Instructor: Aiichiro Nakano</li>
+        </ul> 
+</section>
 
 <section id="service">
     <h2>Professional Service</h2>  
@@ -112,9 +118,15 @@ I am a second-year PhD student at University of Southern California (USC), where
     ARR (2023), COLING (2023), ICWSM (2024)
     </ul>
 </section>
+
+<section id="Miscellany">
+    <h2>Miscellany</h2> 
+</section>
+
 </div>
     <div id="footer">
         <p>Last modified date: August, 2024.</p>
     </div>
 </body>
 </html>
+
