--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ I am a Second-year PhD student at University of Southern California(USC), where 
 <section id="education">  
     <h2>Education</h2>
         <ul>
-        <li>Aug. 2023 - Now<br>
+        <li>Aug. 2023 - Present<br>
         Ph.D. in Computer Science, University of Southern California<br>
         Advisor: <a href="https://www.isi.edu/people-lerman/" target="_black"> Prof. Kristina Lerman</a><br>
         </li>
