--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ I am a Second-year PhD student at University of Southern California(USC), where 
     </li>
 
     <li>
-        <a href = "https://arxiv.org/abs/2212.00339" target="_black">Anger breeds controversy: analyzing controversy and emotions on reddit</a>
+        <a href = "https://arxiv.org/abs/2212.00339" target="_black">Anger Breeds Controversy: Analyzing Controversy and Emotions on Reddit</a>
     <br>
     <b>Kai Chen</b>, Zihao He, Rong-Ching Chang, Jonathan May, Kristina Lerman
     <br>
