--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Kai Chen's Homepage</title>
 <meta id="viewport" name="viewport" content="width=800" />
 <meta name="description" content="Kai Chen personal academic website" />
-<meta name="keywords" content="Kai Chen, USC, University of Southern California, Information Sciences Institute, Machine Learning, Natural Language Processing, Computational Social Science" />
+<meta name="keywords" content="Kai Chen, USC, usc, University of Southern California, isi, Information Sciences Institute, Machine Learning, Natural Language Processing, Computational Social Science" />
 <link rel="stylesheet" href="./theme/css/base.css" type="text/css" />
 </head>
 <body>
@@ -27,7 +27,7 @@
     </header>
     
 <section id="bio">
-I am a Second-year PhD student at University of Southern California(USC), where I work at the <a href="https://www.isi.edu/" target="_black"> Information Sciences Institute</a> (USC-ISI). I am advised by Prof <a href="https://www.isi.edu/people-lerman/" target="_black"> Kristina Lerman</a>. My research interest mainly revolves around <b>computational social science</b> and <b>natural language processing</b>. Specifically, I am interested in <b>Large Language model (LLM) safety</b> and <b>LLM application</b>. Recently, I have been studying ideological manipulation in LLMs. I also leverage LLM to understand the influence campaign in online social media.
+I am a second-year PhD student at University of Southern California(USC), where I work at the <a href="https://www.isi.edu/" target="_black"> Information Sciences Institute</a> (USC-ISI). I am advised by Prof <a href="https://www.isi.edu/people-lerman/" target="_black"> Kristina Lerman</a>. My research interest mainly revolves around <b>computational social science</b> and <b>natural language processing</b>. Specifically, I am interested in <b>safety and alignment</b> of large language models (LLMs). Recently, I have been studying ideological manipulation in LLMs. I also usc LLM to understand the influence campaign in online social media.
 
 
 <p><b>Email</b>: kchen035 AT usc.edu; kchen AT isi.edu </p>
