--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     
 <section id="bio">
-I am a second-year PhD student at University of Southern California(USC), where I work at the <a href="https://www.isi.edu/" target="_black"> Information Sciences Institute</a> (USC-ISI). I am advised by Prof <a href="https://www.isi.edu/people-lerman/" target="_black"> Kristina Lerman</a>. My research interest mainly revolves around <b>computational social science</b> and <b>natural language processing</b>. Specifically, I am interested in <b>safety and alignment</b> of large language models (LLMs). Recently, I have been studying ideological manipulation in LLMs. I also usc LLM to understand the influence campaign in online social media.
+I am a second-year PhD student at University of Southern California(USC), where I work at the <a href="https://www.isi.edu/" target="_black"> Information Sciences Institute</a> (USC-ISI). I am advised by Prof <a href="https://www.isi.edu/people-lerman/" target="_black"> Kristina Lerman</a>. My research interest mainly revolves around <b>computational social science</b> and <b>natural language processing</b>. Specifically, I am interested in <b>safety and alignment</b> of large language models (LLMs). Recently, I have been studying ideological manipulation in LLMs. I also use LLM to understand the influence campaign in online social media.
 
 
 <p><b>Email</b>: kchen035 AT usc.edu; kchen AT isi.edu </p>
