--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ I am a second-year PhD student at University of Southern California(USC), where 
     <br>
     <b>Kai Chen</b>, Zihao He, Jun Yan, Taiwei Shi, Kristina Lerman
     <br>
-    <i>SeT LLM @ ICLR 2024 (Best Paper Runner-up)</i>
+    <i>SeT LLM @ ICLR 2024 <span style="color: red;">(Best Paper Runner-up)</span></i>
+    <i>EMNLP 2024</i>
     <br>
     </li>
 
