--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ I am a second-year PhD student at University of Southern California(USC), where 
     <br>
     <i>SeT LLM @ ICLR 2024 <span style="color: red;">(Best Paper Runner-up)</span></i>
     <br>
-    <i>EMNLP 2024</i>
+    <i>To appear at EMNLP 2024</i>
     <br>
     </li>
 
