--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ I am a second-year PhD student at University of Southern California(USC), where 
 <section id="service">
     <h2>Professional Service</h2>  
     <ul>
-    Program Committee Member/Reviewer: 
+    Reviewer: 
     <br>
     ARR (2024), COLING (2024), ICWSM (2024)
     </ul>
@@ -127,7 +127,7 @@ I am a second-year PhD student at University of Southern California(USC), where 
 
 </div>
     <div id="footer">
-        <p>Last modified date: August, 2024.</p>
+        <p>Last modified date: September 2024.</p>
     </div>
 </body>
 </html>
