--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Kai Chen (陈凯)</h1>
         <ul>
             <!--<li><a href="./#experience">Experience</a></li>-->
-            <li><a href="https://scholar.google.com/citations?user=ErRPAGgAAAAJ">Google Scholar</a></li>
+            <li><a href="https://scholar.google.com/citations?user=ErRPAGgAAAAJ&hl=en">Google Scholar</a></li>
             <li><a href="https://www.semanticscholar.org/author/Kai-Chen/2266798497">Semantic Scholar</a></li>
             <li><a href="https://github.com/kaichen23" target="_black">Github</a></li>
             <li><a href="https://x.com/kaichen23" target="_black">Twitter</a></li>
