--- a/index.html
+++ b/index.html
@@ -48,10 +48,19 @@ I am a second-year PhD student at University of Southern California(USC), where 
 </section>
 
 <section id="pubs">
-    <h2>Publications</h2>
+    <h2>Publications & Preprints</h2>
     <p>(*: equal contribution)</p>
 
     <ul>
+
+    <li>
+    <a href = "https://arxiv.org/abs/2505.20645" target="_black">STEER-BENCH: A Benchmark for Evaluating the Steerability of Large Language Models</a>
+    <br>
+    <b>Kai Chen</b>, Zihao He, Taiwei Shi, Kristina Lerman
+    <br>
+    <i>Preprint 2025</i>
+    <br>
+    </li>
 
 
     <li>
@@ -117,7 +126,7 @@ I am a second-year PhD student at University of Southern California(USC), where 
     <ul>
     Reviewer: 
     <br>
-    ARR (2024), COLING (2024), ICWSM (2024)
+    ARR (2024-2025), ICWSM (2024-2025), COLING (2024)
     </ul>
 </section>
 
@@ -127,7 +136,7 @@ I am a second-year PhD student at University of Southern California(USC), where 
 
 </div>
     <div id="footer">
-        <p>Last modified date: November 2024.</p>
+        <p>Last modified date: June 2025.</p>
     </div>
 </body>
 </html>
