--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     
 <section id="bio">
-I am a PhD candidate at University of Southern California (USC), where I work at the <a href="https://www.isi.edu/" target="_black"> Information Sciences Institute</a> (USC-ISI). I am part of <a href="https://lermanlab.github.io/" target="_black"> the SEA Lab</a> and advised by Prof <a href="https://www.isi.edu/people-lerman/" target="_black"> Kristina Lerman</a>. My research interest mainly revolves around <b>computational social science</b> and <b>natural language processing</b>. Specifically, I am interested in <b>alignment, data synthesis, and societal impacts</b> of large language models (LLMs). Recently, I have been studying ideological manipulation in LLMs. I also use LLM to understand the influence campaign in online social media.
+I am a PhD candidate at University of Southern California (USC), where I work at the <a href="https://www.isi.edu/" target="_black"> Information Sciences Institute</a> (USC-ISI). I am part of <a href="https://cutelab.name/" target="_black"> CUTE LAB NAME</a> and <a href="https://lermanlab.github.io/" target="_black"> the SEA Lab</a> and advised by Prof. <a href="https://jonmay.github.io/webpage/" target="_black"> Jonathan May</a> and Prof. <a href="https://www.isi.edu/people-lerman/" target="_black"> Kristina Lerman</a>. My research interest mainly revolves around <b>natural language processing</b> and <b>computational social science</b>. Specifically, I am interested in <b>alignment, data synthesis, and societal impacts</b> of large language models (LLMs). Recently, I have been studying ideological manipulation in LLMs.
 
 
 <p><b>Email</b>: kchen035 AT usc.edu; kchen AT isi.edu </p>
@@ -41,7 +41,6 @@ I am a PhD candidate at University of Southern California (USC), where I work at
         </li>
         <li>Aug. 2020 - Dec. 2022<br>
         M.S. in Computer Science, University of Southern California<br>
-        Advisor: Prof. Kristina Lerman; <a href="https://jonmay.github.io/webpage/" target="_black"> Prof. Jonathan May</a><br>
         <li>Sep. 2016 - Jun. 2020<br>
         B.E. in Software Engineering, Zhejiang University of Technology</li>
         </ul>
