--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ I am a PhD candidate at University of Southern California (USC), where I work at
     <br>
     <b>Kai Chen</b>, Zihao He, Taiwei Shi, Kristina Lerman
     <br>
-    <i>Preprint 2025</i>
+    <i>To appear at EMNLP 2025</i>
     <br>
     </li>
 
