--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ I am a PhD candidate at University of Southern California (USC), where I work at
         <ul>
         <li>Aug. 2023 - Present<br>
         Ph.D. in Computer Science, University of Southern California<br>
-        Advisor: <a href="https://www.isi.edu/people-lerman/" target="_black"> Prof. Kristina Lerman</a><br>
+        Advisor: <a href="https://jonmay.github.io/webpage/" target="_black"> Prof. Jonathan May</a>; <a href="https://www.isi.edu/people-lerman/" target="_black"> Prof. Kristina Lerman</a><br>
         </li>
         <li>Aug. 2020 - Dec. 2022<br>
         M.S. in Computer Science, University of Southern California<br>
