--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@ I am a PhD candidate at University of Southern California (USC), where I work at
     <h2>Teaching</h2> 
         <ul>
             <li>Fall 2024, <a href = "https://aiichironakano.github.io/cs596.html" target="_black">CSCI 596 Scientific Computing and Visualization</a>, Instructor: Aiichiro Nakano</li>
-        </ul> 
+        </ul>
+        <ul>
+            <li>Fall 2025, CSCI 360 Artificial Intelligence: Principles and Foundations, Instructor: Aiichiro Nakano</li>
+        </ul>
 </section>
 
 <section id="service">
@@ -125,7 +128,7 @@ I am a PhD candidate at University of Southern California (USC), where I work at
     <ul>
     Reviewer: 
     <br>
-    ARR (2024-2025), ICWSM (2024-2025), COLING (2024)
+    ACL Rolling Review (2024-2025), ICWSM (2024-2025), COLING (2024)
     </ul>
 </section>
 
@@ -135,7 +138,7 @@ I am a PhD candidate at University of Southern California (USC), where I work at
 
 </div>
     <div id="footer">
-        <p>Last modified date: June 2025.</p>
+        <p>Last modified date: Sep. 2025.</p>
     </div>
 </body>
 </html>
