--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ I am a PhD candidate at University of Southern California (USC), where I work at
             <li>Fall 2024, <a href = "https://aiichironakano.github.io/cs596.html" target="_black">CSCI 596 Scientific Computing and Visualization</a>, Instructor: Aiichiro Nakano</li>
         </ul>
         <ul>
-            <li>Fall 2025, CSCI 360 Artificial Intelligence: Principles and Foundations, Instructor: Aiichiro Nakano</li>
+            <li>Fall 2025, CSCI 360 Artificial Intelligence: Principles and Foundations, Instructor: Mohammad Reza Rajati</li>
         </ul>
 </section>
 
